erDiagram

users ||--o{ orders: ""
users ||--o{ user_addresses: ""
users ||--o{ payment_methods: ""
users ||--o{ user_credit_cards: ""
user_credit_cards |o--o{ payment_methods: ""
user_credit_cards }o--|| card_brands: ""
orders ||--|{ order_items: ""
orders }o--|| payment_statuses: ""
orders }o--|| tax_rates: ""
orders }o--|| provide_methods: ""
orders }o--|| packagings: ""
orders }o--o| payment_methods: ""
payment_methods }o--|| payment_kinds: ""
order_items ||--o{ order_item_optional_menus: ""
order_item_optional_menus }o--|| optional_menus: ""
order_items }|--|| products: ""
products ||--o{ product_logs: ""
product_logs }o--|| tax_rates: ""
product_log_provide_methods }|--|| product_logs: ""
product_log_provide_methods }o--|| provide_methods: ""
product_log_families }o--o{ product_logs: ""
categories ||--o{ product_log_categories: ""
product_logs ||--o{ product_log_categories: ""
users ||--o{ user_coupons: ""
user_coupons }o--|| coupons: ""
coupons }o--|| coupon_types: ""
orders ||--o{ order_coupons: ""
orders }o--|| user_addresses: ""
orders }o--|| payment_methods: ""
order_coupons }o--|| coupons: ""
guest_user_coupons }o--|| coupons: ""
guest_users ||--o{ guest_user_coupons: ""
guest_users ||--o| payment_methods: ""
guest_users ||--o| user_addresses: ""
guest_users ||--o| user_credit_cards: ""
guest_users ||--o{ orders: ""

users {
  id bigint PK
  name varchar(255)
  phone varchar(11)
  email varchar(255)
  crypted_password varchar(255)
  salt varchar(255)
}

guest_users {
  id bigint PK
  name varchar(255)
  phone varchar(11)
  email varchar(255)
}

%% guest_user_idを追加した
user_addresses {
  id bigint pk
  user_id bigint FK
  guest_user_id bigint FK
  name varchar(255)
  zip_code varchar(255)
  region varchar(255)
  city varchar(255)
  address_line_1 varchar(255)
  address_line_2 varchar(255)
}

card_brands {
  id bigint PK
  name varchar(255)
}

%% guest_user_idを追加した
user_credit_cards {
  id bigint PK
  user_id bigint FK
  guest_user_id bigint FK
  card_brand_id bigint FK
  card_number bigint
  card_validation_code bigint
  expires_at datetime
}

payment_kinds {
  id bigint PK
  name varchar(255)
}

%% guest_user_idを追加した
payment_methods {
  id bigint PK
  user_id bigint FK
  guest_user_id bigint FK
  payment_kind_id bigint
  user_credit_card_id bigint FK
}

payment_statuses {
  id bigint PK
  name varchar(255)
}

packagings {
  id bigint PK
  name varchar(255)
  price bigint
}

provide_methods {
  id bigint PK
  name varchar(255)
}

tax_rates {
  id bigint PK
  tax_percentage int
}

%% guest_user_idを追加した
orders {
  id bigint PK
  total_quantity int
  sub_total_price int
  total_price int
  provide_method_id bigint FK
  payment_method_id bigint FK
  payment_status_id bigint FK
  ordered_at datetime
  payment_completed_at datetime
  user_id bigint FK
  guest_user_id bigint FK
  user_addresse_id bigint FK
  tax_rate_id bigint FK
  packaging_id bigint FK
}

products {
  id bigint PK
}

order_items {
  id bigint PK
  quantity int
  cancel_quantity int
  sub_total_price int
  total_price int
  order_id bigint FK
  product_id bigint FK
}

optional_menus {
  id bigint PK
  name varchar(255)
}

order_item_optional_menus {
  id bigint PK
  order_item_id bigint FK
  optional_menu_id bigint FK
}

product_logs {
  id bigint PK
  name varchar(255)
  price int
  tax_rate_id bigint FK
  product_id bigint
  created_at datetime
}

product_log_families {
  id bigint PK
  parent_id bigint FK
  child_id bigin FK
}

categories {
  id bigint PK
  name varchar(255)
}

product_log_categories {
  id bigint PK
  product_log_id bigint FK
  category_id bigint FK
}

product_log_provide_methods {
  id bigint PK
  product_]og_id bigint FK
  provide_method_id bigint
}

coupon_types {
  id bigint PK
  name varchar(255)
}

coupons {
  id bigint PK
  name varchar(255)
  coupon_code varchar(255)
  discount_price int
  coupon_type_id bigint FK
  starts_at datetime
  ends_at datetime
}

user_coupons {
  id bigint PK
  user_id bigint FK
  coupon_id bigint FK
  used_at datetime
}

%% 課題４で新しく追加したテーブル
guest_user_coupons {
  id bigint PK
  guest_user_id bigint FK
  coupon_id bigint FK
  used_at datetime
}

order_coupons {
  id bigint PK
  order_id bigint FK
  coupon_id bigint FK
}
